Fixed Wandershare img alignment

--- a/style.css
+++ b/style.css
@@ -58,9 +58,13 @@ body {
     .app-description-left, .wandershare-title, .wandershare-link {
         margin-left: 2rem;
     }
-    .img-col {
+    .img-col-left {
         padding: 2rem;
         margin: 2rem;
+    }
+    .img-col-right {
+        padding: 2rem;
+        margin: 2rem 2rem 0rem 0rem;
     }
 }
 
